--- a/dao-library-android/src/main/res/values/strings.xml
+++ b/dao-library-android/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">dao-library-android</string>
+    <string name="search_activity_widget_button_description">Search item</string>
 </resources>
